mockgcp/mockcompute/testdata/firewall/crud/_http.log
POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/networks?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive
Content-Type: application/json

{
  "autoCreateSubnetworks": true,
  "name": "${networkID}",
  "routingConfig": {
    "routingMode": "REGIONAL"
  }
}

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "insert",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${networkID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "user": "user@example.com"
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}/wait?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "insert",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${networkID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "autoCreateSubnetworks": true,
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "kind": "compute#network",
  "name": "${networkID}",
  "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
  "routingConfig": {
    "bgpBestPathSelectionMode": "LEGACY",
    "routingMode": "REGIONAL"
  },
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/africa-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-east1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-east2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-northeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-northeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-northeast3/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-south2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-southeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/asia-southeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/australia-southeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/australia-southeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-central2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-north1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-north2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-southwest1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west10/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west12/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west3/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west4/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west6/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west8/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/europe-west9/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/me-central1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/me-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/northamerica-northeast1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/northamerica-northeast2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/northamerica-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/southamerica-east1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/southamerica-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-central1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-east1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-east4/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-east5/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-south1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west1/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west2/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west3/subnetworks/${networkID}",
    "https://www.googleapis.com/compute/v1/projects/${projectId}/regions/us-west4/subnetworks/${networkID}"
  ]
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive
Content-Type: application/json

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80"
      ]
    }
  ],
  "description": "test firewall",
  "direction": "INGRESS",
  "name": "${firewallID}",
  "network": "https://compute.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "sourceRanges": [
    "0.0.0.0/0"
  ]
}

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "insert",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}/wait?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "insert",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80"
      ]
    }
  ],
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "description": "test firewall",
  "direction": "INGRESS",
  "disabled": false,
  "id": "000000000000000000000",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "${firewallID}",
  "network": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "priority": 1000,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "sourceRanges": [
    "0.0.0.0/0"
  ]
}

---

PATCH https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive
Content-Type: application/json

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80"
      ]
    },
    {
      "IPProtocol": "tcp",
      "ports": [
        "443"
      ]
    }
  ],
  "description": "test firewall",
  "direction": "INGRESS",
  "logConfig": {
    "enable": false
  },
  "name": "${firewallID}",
  "network": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "priority": 1000,
  "sourceRanges": [
    "0.0.0.0/0"
  ]
}

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "patch",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}/wait?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "patch",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

GET https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "allowed": [
    {
      "IPProtocol": "tcp",
      "ports": [
        "80"
      ]
    },
    {
      "IPProtocol": "tcp",
      "ports": [
        "443"
      ]
    }
  ],
  "creationTimestamp": "2024-04-01T12:34:56.123456Z",
  "description": "test firewall",
  "direction": "INGRESS",
  "disabled": false,
  "id": "000000000000000000000",
  "kind": "compute#firewall",
  "logConfig": {
    "enable": false
  },
  "name": "${firewallID}",
  "network": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "priority": 1000,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "sourceRanges": [
    "0.0.0.0/0"
  ]
}

---

DELETE https://compute.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "delete",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}/wait?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "delete",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${firewallID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/firewalls/${firewallID}",
  "user": "user@example.com"
}

---

DELETE https://compute.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "delete",
  "progress": 0,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "RUNNING",
  "targetId": "${networkID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "user": "user@example.com"
}

---

POST https://compute.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}/wait?alt=json
Accept: application/json
Authorization: (removed)
Connection: keep-alive

200 OK
Content-Type: application/json; charset=UTF-8
Server: ESF
Vary: Origin
Vary: X-Origin
Vary: Referer
X-Content-Type-Options: nosniff
X-Frame-Options: SAMEORIGIN
X-Xss-Protection: 0

{
  "endTime": "2024-04-01T12:34:56.123456Z",
  "id": "000000000000000000000",
  "insertTime": "2024-04-01T12:34:56.123456Z",
  "kind": "compute#operation",
  "name": "${operationID}",
  "operationType": "delete",
  "progress": 100,
  "selfLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/operations/${operationID}",
  "startTime": "2024-04-01T12:34:56.123456Z",
  "status": "DONE",
  "targetId": "${networkID}",
  "targetLink": "https://www.googleapis.com/compute/v1/projects/${projectId}/global/networks/${networkID}",
  "user": "user@example.com"
}
